Update latest Acosix parent POM, Ignite 2.17.0 dependency, Docker integration-test setup